# synapse-agent

./: .gitignore  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
docs/: 001-hermes-agent-loop.md
examples/: .env
src/: main.ts
